--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "food ordering app",
   "main": "server.js",
   "scripts": {
-    "build": "tsc",
     "start": "node dist/server.js",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
     "dev": "nodemon --exec ts-node src/server.ts"
   },
   "author": "DaBee",
@@ -17,6 +19,8 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
     "@types/swagger-ui-express": "^4.1.8",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   },
@@ -33,5 +37,10 @@
     "pino-pretty": "^13.1.1",
     "swagger-ui-express": "^5.0.1",
     "zod": "^4.0.17"
-  }
+  },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ]
 }
