updated sign in to include phoe and referral

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "DaBee",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
@@ -27,6 +28,7 @@
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^8.1.0",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -40,7 +42,6 @@
   },
   "pre-commit": [
     "ts.check",
-    "build",
-    "add-build"
+    "build"
   ]
 }
